crates/aikit-tui/tests/snapshots/knowledge_graph_v2__snapshot_degraded_truncated_focus_only_graph.snap
---
source: crates/aikit-tui/tests/knowledge_graph_v2.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ◆                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                


Inspector
nothing selected

truncated: 0 node(s), 0 edge(s) not shown
