crates/aikit-tui/tests/snapshots/knowledge_graph_v2__snapshot_narrow_grouped_graph_unicode.snap
---
source: crates/aikit-tui/tests/knowledge_graph_v2.rs
expression: text
---
┌ AIKit · Workspace · payments · test-h┐
│/ alpha   Search · Worlds · Compose · │
│┌ Relations · Graph · depth 1 ───────┐│
││alpha                               ││
││                                    ││
││Outgoing →                          ││
││  related-skill ↔ skill/beta        ││
││  related-skill ↔ skill/gamma       ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
│└────────────────────────────────────┘│
│Knowledge · 1 result · 0 staged · scop│
└──────────────────────────────────────┘
