crates/aikit-tui/tests/snapshots/knowledge_graph_v2__snapshot_wide_spatial_graph_node_focus_context_band.snap
---
source: crates/aikit-tui/tests/knowledge_graph_v2.rs
expression: text
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                        Context ▲ member  Root (knowledge-space)                                        
                                                                                                                        
                                                                Outgoing → source                                       
                                                            ◆   source:spec (knowledge-source)                          
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        


Inspector
nothing selected
